--- a/infrastructure/kubernetes/roles/network_policies/templates/cloudflare-tunnel-namespace.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/cloudflare-tunnel-namespace.yaml
@@ -14,7 +14,7 @@ spec:
     # Prometheus metrics
     - fromEndpoints:
         - matchLabels:
-            io.kubernetes.pod.namespace: prometheus
+            io.kubernetes.pod.namespace: victoria-metrics
       toPorts:
         - ports:
             - port: "20241"
