--- a/infrastructure/kubernetes/roles/network_policies/templates/nginx-namespace.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/nginx-namespace.yaml
@@ -11,7 +11,7 @@ spec:
     # Prometheus metrics scraping
     - fromEndpoints:
         - matchLabels:
-            io.kubernetes.pod.namespace: prometheus
+            io.kubernetes.pod.namespace: victoria-metrics
       toPorts:
         - ports:
             - port: "10254"
