--- a/infrastructure/kubernetes/roles/victoria_metrics/defaults/main.yaml
+++ b/infrastructure/kubernetes/roles/victoria_metrics/defaults/main.yaml
@@ -1,28 +1,26 @@
+---
 vm_vars:
   kubernetes:
-    chart:
-      version: "0.2.0"
-    repository:
-      name: victoriametrics
-      url: https://victoriametrics.github.io/helm-charts/
+    helm:
+      chart:
+        name: victoria-metrics-k8s-stack
+        version: "0.61.9"
+      repository:
+        name: victoriametrics
+        url: https://victoriametrics.github.io/helm-charts/
     operator: # installs the operator crd
       enable: true
       resources:
         limits:
           cpu: null
-          memory: 128mi
+          memory: 128Mi
         requests:
           cpu: 10m
-          memory: 128mi
+          memory: 128Mi
     vmsingle: # creates a single pod vm cluster (non-HA) crds
       enable: true
-      resources:
-        limits:
-          cpu: null
-          memory: 2048Mi
-        requests:
-          cpu: 10m
-          memory: 2048Mi
+      retention_period: "14d" # keep metrics for 14 days before deleting
+      storage: 40Gi # how much storage to allocate for vm
     alertmanager: # installs alertmanager crd
       enable: false
     vmalert: # Crd for defining alert rules
@@ -30,7 +28,7 @@ vm_vars:
     vmagent: # agent for collecting metrics from sources
       enable: true
       spec:
-        scrapeInterval: 25s
+        scrapeInterval: 30s
     grafana: 
       enable: true
       replicas: 1
@@ -47,8 +45,8 @@ vm_vars:
         requests:
           cpu: 10m
           memory: 256Mi
-    prometheus-node-exporter:
-      enabled: true
+    prometheus_node_exporter:
+      enable: true
       resources: 
         limits:
           cpu: null
@@ -56,7 +54,7 @@ vm_vars:
         requests:
           cpu: 10m
           memory: 128Mi
-    kube-state-metrics:
+    kube_state_metrics:
       replicas: 1
       resources:
         limits:
