chore(infra): added new network policies to main.yaml and reset.yaml

--- a/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
@@ -6,7 +6,7 @@
       with_items:
         - argocd
         - nginx
-        - prometheus
+        - victoria-metrics
         - frontend
         - kafka
         - cloudflare-tunnel
