--- a/infrastructure/kubernetes/roles/network_policies/tasks/namespaces.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/tasks/namespaces.yaml
@@ -10,12 +10,14 @@
           name: "{{ namespace }}"
   loop:
     - argocd
-    - prometheus
+    - victoria-metrics
     - nginx
     - frontend
+    - kafka
     - cloudflare-tunnel
     - external-dns
     - cert-manager
     - backend
+    - postgres
   loop_control:
     loop_var: namespace
