--- a/backend/data_processing/data_ingestion/pyproject.toml
+++ b/backend/data_processing/data_ingestion/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "confluent-kafka>=2.11.1",
     "dotenv>=0.9.9",
+    "emoji>=2.15.0",
     "langdetect>=1.0.9",
     "mypy>=1.18.2",
     "praw>=7.8.1",
