--- a/backend/data_pipeline/ingestion/pyproject.toml
+++ b/backend/data_pipeline/ingestion/pyproject.toml
@@ -9,19 +9,26 @@ dependencies = [
     "dotenv>=0.9.9",
     "emoji>=2.15.0",
     "langdetect>=1.0.9",
-    "mypy>=1.18.2",
     "praw>=7.8.1",
     "pydantic>=2.11.10",
-    "pytest>=8.4.2",
-    "ruff>=0.13.3",
     "testcontainers[kafka]>=4.13.2",
 ]
 
-[tool.mypy]
-python_version = "3.13"
-check_untyped_defs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-warn_return_any = true
-warn_unused_ignores = true
+[tool.pyrefly]
+python-version = "3.13"
+untyped-def-behavior = "check-and-infer-return-any"
+search-path = ["."] # so pyrefly knows we are running from ingestion folder not ingestion/src
+
+[tool.pyrefly.errors]
+unannotated-parameter = "error"
+unannotated-return = "error"
+unannotated-attribute = "error"
+implicit-any = "error"
+
+[dependency-groups]
+dev = [
+    "pyrefly>=0.47.0",
+    "pytest>=9.0.2",
+    "ruff>=0.14.11",
+]
 
