--- a/backend/data_pipeline/ingestion/pyproject.toml
+++ b/backend/data_pipeline/ingestion/pyproject.toml
@@ -5,12 +5,14 @@ description = "Worker Service in charge of taking in data from reddit api and se
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "confluent-kafka>=2.11.1",
     "dotenv>=0.9.9",
     "emoji>=2.15.0",
     "langdetect>=1.0.9",
     "praw>=7.8.1",
+    "psycopg>=3.3.2",
+    "psycopg-pool>=3.3.0",
     "pydantic>=2.11.10",
+    "pydantic-settings>=2.12.0",
     "testcontainers[kafka]>=4.13.2",
 ]
 
