--- a/backend/data_pipeline/ingestion/pyproject.toml
+++ b/backend/data_pipeline/ingestion/pyproject.toml
@@ -9,11 +9,10 @@ dependencies = [
     "emoji>=2.15.0",
     "langdetect>=1.0.9",
     "praw>=7.8.1",
-    "psycopg>=3.3.2",
+    "psycopg[binary]>=3.3.2",
     "psycopg-pool>=3.3.0",
     "pydantic>=2.11.10",
     "pydantic-settings>=2.12.0",
-    "testcontainers[kafka]>=4.13.2",
 ]
 
 [tool.pyrefly]
@@ -32,5 +31,6 @@ dev = [
     "pyrefly>=0.47.0",
     "pytest>=9.0.2",
     "ruff>=0.14.11",
+    "testcontainers[postgres]>=4.14.0",
 ]
 
