--- a/backend/data_pipeline/sentiment_analysis/pyproject.toml
+++ b/backend/data_pipeline/sentiment_analysis/pyproject.toml
@@ -5,12 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "confluent-kafka>=2.11.1",
     "transformers>=4.57.0",
     "torch==2.5.1+cu124",
     "protobuf>=6.32.1",
     "tiktoken>=0.12.0",
     "sentencepiece>=0.2.1",
+    "psycopg[binary]>=3.3.2",
+    "psycopg-pool>=3.3.0",
+    "pydantic-settings>=2.12.0",
+    "pydantic>=2.12.5",
 ]
 
 [tool.uv.sources]
