dep(ranking_calculator): added numpy and scipy dependencies

--- a/backend/data_pipeline/ranking_calculator/pyproject.toml
+++ b/backend/data_pipeline/ranking_calculator/pyproject.toml
@@ -5,10 +5,12 @@ description = "Python worker service that aggregates sentiment data from product
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "psycopg>=3.3.2",
+    "numpy>=2.4.1",
+    "psycopg[binary]>=3.3.2",
     "psycopg-pool>=3.3.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "scipy>=1.17.0",
 ]
 
 [tool.pyrefly]
