--- a/backend/data_pipeline/ingestion/pyproject.toml
+++ b/backend/data_pipeline/ingestion/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "psycopg-pool>=3.3.0",
     "pydantic>=2.11.10",
     "pydantic-settings>=2.12.0",
+    "fastapi[standard]>=0.128.0",
 ]
 
 [tool.pyrefly]
@@ -30,6 +31,7 @@ implicit-any = "error"
 dev = [
     "pyrefly>=0.47.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "ruff>=0.14.11",
     "testcontainers[postgres]>=4.14.0",
 ]
