--- a/backend/data_pipeline/sentiment_analysis/pyproject.toml
+++ b/backend/data_pipeline/sentiment_analysis/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "psycopg-pool>=3.3.0",
     "pydantic-settings>=2.12.0",
     "pydantic>=2.12.5",
+    "fastapi[standard]>=0.128.0",
 ]
 
 [tool.uv.sources]
