--- a/backend/data_pipeline/sentiment_analysis/pyproject.toml
+++ b/backend/data_pipeline/sentiment_analysis/pyproject.toml
@@ -40,6 +40,7 @@ implicit-any = "error"
 dev = [
     "pyrefly>=0.47.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "ruff>=0.14.11",
     "testcontainers[postgres]>=4.14.0",
 ]
