dep(insights api): added sqlalchemy and asyncpg libraries for connecting to the database

--- a/backend/insights_api/pyproject.toml
+++ b/backend/insights_api/pyproject.toml
@@ -5,7 +5,9 @@ description = "Fastapi api for frontend to query to get product insights"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.31.0",
     "fastapi[standard]>=0.128.0",
+    "sqlalchemy[asyncio]>=2.0.43",
     "pydantic-settings>=2.12.0",
 ]
 
