--- a/backend/insights_api/pyproject.toml
+++ b/backend/insights_api/pyproject.toml
@@ -26,5 +26,6 @@ implicit-any = "error"
 dev = [
     "pyrefly>=0.48.2",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "ruff>=0.14.13",
 ]
