--- a/backend/insights_api/pyproject.toml
+++ b/backend/insights_api/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi[standard]>=0.128.0",
     "sqlalchemy[asyncio]>=2.0.43",
     "pydantic-settings>=2.12.0",
+    "testcontainers[postgres]>=4.14.0",
 ]
 
 [tool.pyrefly]
