--- a/backend/insights_api/pyproject.toml
+++ b/backend/insights_api/pyproject.toml
@@ -30,3 +30,8 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "ruff>=0.14.13",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
+asyncio_default_test_loop_scope = "session"
