--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,17 +26,12 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
-    "recharts": "^2.15.1",
-    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
