--- a/backend/data_pipeline/llm_summary/pyproject.toml
+++ b/backend/data_pipeline/llm_summary/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "psycopg-pool>=3.3.0",
     "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
+    "pytest-asyncio>=1.3.0",
 ]
 
 [tool.pyrefly]
