--- a/backend/data_pipeline/llm_summary/pyproject.toml
+++ b/backend/data_pipeline/llm_summary/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "pytest-asyncio>=1.3.0",
+    "testcontainers[postgres]>=4.14.0",
 ]
 
 [tool.pyrefly]
