--- a/backend/data_pipeline/ranking_calculator/pyproject.toml
+++ b/backend/data_pipeline/ranking_calculator/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "scipy>=1.17.0",
+    "fastapi[standard]>=0.128.0",
 ]
 
 [tool.pyrefly]
