--- a/backend/data_pipeline/ranking_calculator/pyproject.toml
+++ b/backend/data_pipeline/ranking_calculator/pyproject.toml
@@ -29,6 +29,7 @@ implicit-any = "error"
 dev = [
     "pyrefly>=0.48.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "ruff>=0.14.11",
     "testcontainers[postgres]>=4.14.0",
 ]
