--- a/backend/insights_api/pyproject.toml
+++ b/backend/insights_api/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi[standard]>=0.128.0",
     "sqlalchemy[asyncio]>=2.0.43",
     "pydantic-settings>=2.12.0",
-    "testcontainers[postgres]>=4.14.0",
+    "valkey[libvalkey]>=6.1.1",
 ]
 
 [tool.pyrefly]
@@ -29,6 +29,7 @@ dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "ruff>=0.14.13",
+    "testcontainers[postgres]>=4.14.0",
 ]
 
 [tool.pytest.ini_options]
