--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.0",
+    "@tanstack/react-query": "^5.90.20",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -27,7 +29,6 @@
     "postcss": "^8.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.17",
