--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,33 @@ credentials/
 .ruff_cache
 datasets/
 
+# frontend
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+coverage/
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
 # Kafka Streams Java files/folders
 target
 
