fix(ci/cd): removed dot in the if statement causing issues in deployment

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -69,7 +69,7 @@ jobs:
   
   category-classification-cd:
     needs: path-filter
-    if: ${{ needs.path-filter.outputs.backend. == 'true' }}
+    if: ${{ needs.path-filter.outputs.backend == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
