--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,7 +3,7 @@ name: CD workflow
 on:
   workflow_run:
     workflows:
-      - Tagging workflow
+      - CI + Tagging Workflow
     types:
       - completed
     branches:
@@ -12,57 +12,39 @@ on:
 permissions:
   packages: write
 
-jobs: 
-  path-filter:
-    runs-on: ubuntu-latest
-    outputs:
-        frontend: ${{ steps.changes.outputs.frontend }}
-        insights_api: ${{ steps.changes.outputs.insights_api }}
-        data_ingestion: ${{ steps.changes.outputs.data_ingestion }}
-        llm_summary: ${{ steps.changes.outputs.llm_summary }}
-        ranking_calculator: ${{ steps.changes.outputs.ranking_calculator }}
-        sentiment_analysis: ${{ steps.changes.outputs.sentiment_analysis }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            frontend:
-              - 'frontend/**'
-            insights_api:
-              - 'backend/insights_api/**'
-            data_ingestion:
-              - 'backend/data_pipeline/ingestion/**'
-            llm_summary:
-              - 'backend/data_pipeline/llm_summary/**'
-            ranking_calculator:
-              - 'backend/data_pipeline/ranking_calculator/**'
-            sentiment_analysis:
-              - 'backend/data_processing/sentiment_analysis/**'
-
+jobs:
   frontend-cd:
-    needs: path-filter
-    if: ${{ needs.path-filter.outputs.frontend == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: Get latest frontend tag
+      - name: Check for frontend version tag
         id: get_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git tag --list "frontend-*" --sort=-v:refname | head -n 1)
-          echo "tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Using tag: ${LATEST_TAG}"
+
+          # Get all frontend tags pointing to current commit
+          TAG=$(git tag --points-at HEAD | grep "^frontend-" || echo "")
+
+          if [ -z "$TAG" ]; then
+            echo "No frontend tag for this commit, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "Found frontend tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set up Docker Buildx
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -70,6 +52,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
@@ -81,34 +64,44 @@ jobs:
             ghcr.io/vchen7629/cyphria-frontend:latest
   
   insights-api-cd:
-    needs: path-filter
-    if: ${{ needs.path-filter.outputs.insights_api == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: Get latest insights api tag
+      - name: Check for insights-api version tag
         id: get_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git tag --list "insights_api-*" --sort=-v:refname | head -n 1)
-          echo "tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Using tag: ${LATEST_TAG}"
+
+          TAG=$(git tag --points-at HEAD | grep "^insights_api-" || echo "")
+
+          if [ -z "$TAG" ]; then
+            echo "No insights-api tag for this commit, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "Found insights-api tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
  
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Build and push Docker image
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/build-push-action@v5
         with:
           context: ./backend/insights_api
@@ -120,73 +113,93 @@ jobs:
             ghcr.io/vchen7629/cyphria-insights-api:latest
 
   data-ingestion-cd:
-    needs: path-filter
-    if: ${{ needs.path-filter.outputs.data_ingestion == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: Get latest data ingestion tag
+      - name: Check for data-ingestion version tag
         id: get_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git tag --list "data_ingestion-*" --sort=-v:refname | head -n 1)
-          echo "tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Using tag: ${LATEST_TAG}"
-          
+
+          TAG=$(git tag --points-at HEAD | grep "^data_ingestion-" || echo "")
+
+          if [ -z "$TAG" ]; then
+            echo "No data-ingestion tag for this commit, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "Found data-ingestion tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Build and push Docker image
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/build-push-action@v5
         with:
           context: ./backend/data_pipeline/ingestion
           file: ./backend/data_pipeline/ingestion/Dockerfile
           push: true
           tags: |
-            ghcr.io/vchen7629/cyphria-data-ingestion:${{ steps.get_tag.outputs.tag}}
+            ghcr.io/vchen7629/cyphria-data-ingestion:${{ steps.get_tag.outputs.tag }}
             ghcr.io/vchen7629/cyphria-data-ingestion:${{ github.sha }}
             ghcr.io/vchen7629/cyphria-data-ingestion:latest
 
   llm-summary-cd:
-    needs: path-filter
-    if: ${{ needs.path-filter.outputs.llm_summary == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: Get latest llm summary tag
+      - name: Check for llm-summary version tag
         id: get_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git tag --list "llm_summary-*" --sort=-v:refname | head -n 1)
-          echo "tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Using tag: ${LATEST_TAG}"
-          
+
+          TAG=$(git tag --points-at HEAD | grep "^llm_summary-" || echo "")
+
+          if [ -z "$TAG" ]; then
+            echo "No llm-summary tag for this commit, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "Found llm-summary tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Build and push Docker image
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/build-push-action@v5
         with:
           context: ./backend/data_pipeline/llm_summary
@@ -198,34 +211,44 @@ jobs:
             ghcr.io/vchen7629/cyphria-llm-summary:latest
 
   ranking-calculator-cd:
-    needs: path-filter
-    if: ${{ needs.path-filter.outputs.ranking_calculator == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: Get latest ranking calculator tag
+      - name: Check for ranking-calculator version tag
         id: get_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git tag --list "ranking_calculator-*" --sort=-v:refname | head -n 1)
-          echo "tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Using tag: ${LATEST_TAG}"
-          
+
+          TAG=$(git tag --points-at HEAD | grep "^ranking_calculator-" || echo "")
+
+          if [ -z "$TAG" ]; then
+            echo "No ranking-calculator tag for this commit, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "Found ranking-calculator tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Build and push Docker image
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/build-push-action@v5
         with:
           context: ./backend/data_pipeline/ranking_calculator
@@ -237,34 +260,44 @@ jobs:
             ghcr.io/vchen7629/cyphria-ranking-calculator:latest
 
   sentiment-analysis-cd:
-    needs: path-filter
-    if: ${{ needs.path-filter.outputs.sentiment_analysis == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: Get latest sentiment analysis tag
+      - name: Check for sentiment-analysis version tag
         id: get_tag
         run: |
           git fetch --tags
-          LATEST_TAG=$(git tag --list "sentiment_analysis-*" --sort=-v:refname | head -n 1)
-          echo "tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
-          echo "Using tag: ${LATEST_TAG}"
-          
+
+          TAG=$(git tag --points-at HEAD | grep "^sentiment_analysis-" || echo "")
+
+          if [ -z "$TAG" ]; then
+            echo "No sentiment-analysis tag for this commit, skipping"
+            echo "skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "Found sentiment-analysis tag: $TAG"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3 # v3.0.0
+        if: steps.get_tag.outputs.skip != 'true'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Build and push Docker image
+        if: steps.get_tag.outputs.skip != 'true'
         uses: docker/build-push-action@v5
         with:
           context: ./backend/data_pipeline/sentiment_analysis
