--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI Workflow
+name: CI + Tagging Workflow
 
 on:
   push:
@@ -57,7 +57,27 @@ jobs:
         - name: Run tests
           working-directory: frontend
           run: npm run test
-
+      
+    tag-frontend:
+      needs: [path-filter, frontend-ci]
+      if: ${{ needs.path-filter.outputs.frontend == 'true' }}
+      runs-on: ubuntu-latest
+      outputs:
+        new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # gives it full history of commits to find the last tag
+          
+        - name: Bump Frontend version
+          id: tag_version
+          uses: anothrNick/github-tag-action@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch
+            INITIAL_VERSION: 1.0.0
+            TAG_PREFIX: frontend-
+    
     insights-api-ci:
         needs: path-filter
         if: ${{ needs.path-filter.outputs.insights_api == 'true' }}
@@ -94,41 +114,81 @@ jobs:
               run: uv run pytest tests
               working-directory: backend/insights_api
 
+    tag-insights-api:
+      needs: [path-filter, insights-api-ci]
+      if: ${{ needs.path-filter.outputs.insights_api == 'true' }}
+      runs-on: ubuntu-latest
+      outputs:
+        new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # gives it full history of commits to find the last tag
+          
+        - name: Bump Insights Api version
+          id: tag_version
+          uses: anothrNick/github-tag-action@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch
+            INITIAL_VERSION: 1.0.0
+            TAG_PREFIX: insights_api-
+
     data-ingestion-ci:
-        needs: path-filter
-        if: ${{ needs.path-filter.outputs.data_ingestion == 'true' }}
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+      needs: path-filter
+      if: ${{ needs.path-filter.outputs.data_ingestion == 'true' }}
+      runs-on: ubuntu-latest
+      steps:
+          - name: Checkout repository
+            uses: actions/checkout@v4
 
-            - name: Install uv
-              uses: astral-sh/setup-uv@v6
-              with:
-                version: "0.8.19"
-            
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                python-version: "3.13"
+          - name: Install uv
+            uses: astral-sh/setup-uv@v6
+            with:
+              version: "0.8.19"
+          
+          - name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+              python-version: "3.13"
 
-            - name: Install the project
-              run: uv sync --locked --all-extras --dev
-              working-directory: backend/data_pipeline/ingestion
-            
-            - name: Run Linter and Formatting
-              run: |
-                uv run ruff check .
-                uv run ruff format --check
-              working-directory: backend/data_pipeline/ingestion
-            
-            - name: Run Type Checking
-              run: uv run pyrefly check
-              working-directory: backend/data_pipeline/ingestion
-            
-            - name: Run Unit/Integration Tests
-              run: uv run pytest tests
-              working-directory: backend/data_pipeline/ingestion
+          - name: Install the project
+            run: uv sync --locked --all-extras --dev
+            working-directory: backend/data_pipeline/ingestion
+          
+          - name: Run Linter and Formatting
+            run: |
+              uv run ruff check .
+              uv run ruff format --check
+            working-directory: backend/data_pipeline/ingestion
+          
+          - name: Run Type Checking
+            run: uv run pyrefly check
+            working-directory: backend/data_pipeline/ingestion
+          
+          - name: Run Unit/Integration Tests
+            run: uv run pytest tests
+            working-directory: backend/data_pipeline/ingestion
+
+    tag-data-ingestion:
+      needs: [path-filter, data-ingestion-ci]
+      if: ${{ needs.path-filter.outputs.data_ingestion == 'true' }}
+      runs-on: ubuntu-latest
+      outputs:
+        new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # gives it full history of commits to find the last tag
+          
+        - name: Bump Insights Api version
+          id: tag_version
+          uses: anothrNick/github-tag-action@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch
+            INITIAL_VERSION: 1.0.0
+            TAG_PREFIX: data_ingestion-
 
     llm-summary-ci:
         needs: path-filter
@@ -166,6 +226,26 @@ jobs:
               run: uv run pytest tests
               working-directory: backend/data_pipeline/llm_summary
 
+    tag-llm-summary:
+      needs: [path-filter, llm-summary-ci]
+      if: ${{ needs.path-filter.outputs.llm_summary == 'true' }}
+      runs-on: ubuntu-latest
+      outputs:
+        new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # gives it full history of commits to find the last tag
+          
+        - name: Bump Insights Api version
+          id: tag_version
+          uses: anothrNick/github-tag-action@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch
+            INITIAL_VERSION: 1.0.0
+            TAG_PREFIX: llm_summary-
+
     ranking-calculator-ci:
         needs: path-filter
         if: ${{ needs.path-filter.outputs.ranking_calculator == 'true' }}
@@ -202,6 +282,26 @@ jobs:
               run: uv run pytest tests
               working-directory: backend/data_pipeline/ranking_calculator
 
+    tag-ranking-calculator:
+      needs: [path-filter, ranking-calculator-ci]
+      if: ${{ needs.path-filter.outputs.ranking_calculator == 'true' }}
+      runs-on: ubuntu-latest
+      outputs:
+        new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # gives it full history of commits to find the last tag
+          
+        - name: Bump Insights Api version
+          id: tag_version
+          uses: anothrNick/github-tag-action@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch
+            INITIAL_VERSION: 1.0.0
+            TAG_PREFIX: ranking_calculator-
+
     sentiment-analysis-ci:
         needs: path-filter
         if: ${{ needs.path-filter.outputs.sentiment_analysis == 'true' }}
@@ -237,3 +337,23 @@ jobs:
             - name: Run Unit/Integration Tests
               run: uv run pytest tests
               working-directory: backend/data_pipeline/sentiment_analysis
+    
+    tag-sentiment-analysis:
+      needs: [path-filter, sentiment-analysis-ci]
+      if: ${{ needs.path-filter.outputs.sentiment_analysis == 'true' }}
+      runs-on: ubuntu-latest
+      outputs:
+        new_tag: ${{ steps.tag_version.outputs.new_tag }}
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0 # gives it full history of commits to find the last tag
+          
+        - name: Bump Insights Api version
+          id: tag_version
+          uses: anothrNick/github-tag-action@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DEFAULT_BUMP: patch
+            INITIAL_VERSION: 1.0.0
+            TAG_PREFIX: sentiment_analysis-
