fix(ci/cd): added missing permission to the tagging step

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
       - ci-test
+
+permissions:
+  contents: write
+
 jobs:
     path-filter:
       runs-on: ubuntu-latest
