--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,6 +81,7 @@ jobs:
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: frontend-
+            GIT_API_TAGGING: false
     
     insights-api-ci:
         needs: path-filter
@@ -137,6 +138,7 @@ jobs:
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: insights_api-
+            GIT_API_TAGGING: false
 
     data-ingestion-ci:
       needs: path-filter
@@ -193,6 +195,7 @@ jobs:
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: data_ingestion-
+            GIT_API_TAGGING: false
 
     llm-summary-ci:
         needs: path-filter
@@ -249,6 +252,7 @@ jobs:
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: llm_summary-
+            GIT_API_TAGGING: false
 
     ranking-calculator-ci:
         needs: path-filter
@@ -305,6 +309,7 @@ jobs:
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: ranking_calculator-
+            GIT_API_TAGGING: false
 
     sentiment-analysis-ci:
         needs: path-filter
@@ -361,3 +366,4 @@ jobs:
             DEFAULT_BUMP: patch
             INITIAL_VERSION: 1.0.0
             TAG_PREFIX: sentiment_analysis-
+            GIT_API_TAGGING: false
